[tool.poetry]
name = "ps-daily-wims-feed"
version = "0.1.0"
description = ""
authors = ["Josh Clark <josh@firesci.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.950"
isort = "^5.10.1"
pandas = "^1.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
